[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "A server based on Deno runtime, capable of running JavaScript, TypeScript, and WASM services"

[[bin]]
name = "edge-runtime"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base = { path = "../base" }
deno_core = { workspace = true }
clap.workspace = true
env_logger = "0.10.0"
log.workspace = true
sb_graph = { path = "../sb_graph" }
tokio.workspace = true
glob.workspace = true
once_cell.workspace = true
tracing-subscriber = { workspace = true, optional = true }

[build-dependencies]
dotenv-build = { version = "0.1.1" }

[features]
tracing = ["dep:tracing-subscriber"]