[package]
name = "cpu_timer"
version = "0.1.0"
edition = "2021"

[dependencies]
libc.workspace = true
anyhow.workspace = true
tokio.workspace = true
log.workspace = true
ctor.workspace = true
futures.workspace = true
once_cell.workspace = true

signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
nix = { version = "0.26.2", features = ["signal"] }
