[package]
name = "fs"
version = "0.1.0"
authors = ["Supabase <team@supabase.com>"]
edition = "2021"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
deno_semver.workspace = true
deno_ast.workspace = true
deno_fs.workspace = true
deno_npm.workspace = true
deno_io.workspace = true

npm.workspace = true
eszip_async_trait.workspace = true

sb_core.workspace = true
sb_node.workspace = true

anyhow.workspace = true
import_map.workspace = true
indexmap.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
futures.workspace = true
once_cell.workspace = true
thiserror.workspace = true
async-trait.workspace = true
eszip.workspace = true
url.workspace = true
hyper_v014.workspace = true
tempfile.workspace = true
enum-as-inner.workspace = true
either.workspace = true
tracing.workspace = true
rkyv = { workspace = true, features = ["validation"] }

rustls = { version = "0.21", optional = true }
hyper-proxy = { version = "0.9", optional = true, default-features = false, features = ["rustls"] }
hyper-rustls = { version = "0.24", optional = true }
headers = { version = "0.3", optional = true }
normalize-path = "0.2"
memmap2 = "0.9"
aws-sdk-s3 = "1.2"
aws-config = "1.2"
aws-credential-types = "1.2"
aws-smithy-runtime = "1.7"
aws-smithy-runtime-api = "1.7"

[dev-dependencies]
base.workspace = true

sb_event_worker.workspace = true

ctor.workspace = true
rand.workspace = true
serial_test.workspace = true

dotenvy = "0.15"
aws-smithy-runtime = { version = "1.7", features = ["test-util"] }
aws-smithy-runtime-api = { version = "1.7", features = ["test-util"] }

[features]
unsafe-proxy = [
    "dep:rustls",
    "dep:hyper-proxy",
    "dep:hyper-rustls",
    "dep:headers"
]