[package]
name = "graph"
version = "0.1.0"
authors = ["Supabase <team@supabase.com>"]
edition = "2021"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
deno_ast.workspace = true
deno_fs.workspace = true
deno_npm.workspace = true
deno_graph.workspace = true
deno_semver.workspace = true
deno_web.workspace = true
deno_lockfile.workspace = true
deno_cache_dir.workspace = true
deno_config.workspace = true

npm.workspace = true
npm_cache.workspace = true
eszip_async_trait.workspace = true
fs.workspace = true

sb_core.workspace = true
sb_node.workspace = true

anyhow.workspace = true
import_map.workspace = true
async-trait.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
once_cell.workspace = true
urlencoding.workspace = true
glob.workspace = true
futures.workspace = true
scopeguard.workspace = true
thiserror.workspace = true
eszip = { workspace = true, features = ["xxhash3"] }
rkyv = { workspace = true, features = ["validation"] }

hashlink = "0.8"
pathdiff = "0.2"
dashmap = "5.5.3"

[dev-dependencies]
tempfile.workspace = true
enum-as-inner.workspace = true
