[package]
name = "module_loader"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
deno_ast.workspace = true
deno_config.workspace = true
deno_core.workspace = true
deno_fs.workspace = true
deno_npm.workspace = true
deno_semver.workspace = true
deno_tls.workspace = true

# npm.workspace = true
eszip_async_trait.workspace = true
fs.workspace = true
graph.workspace = true

sb_core.workspace = true
sb_node.workspace = true

anyhow.workspace = true
base64.workspace = true
eszip.workspace = true
futures-util.workspace = true
import_map.workspace = true
log.workspace = true
monch.workspace = true
once_cell.workspace = true
rkyv.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
