[package]
name = "module_loader"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
deno.workspace = true
deno_config.workspace = true
deno_core.workspace = true

deno_facade.workspace = true
eszip_async_trait.workspace = true
fs.workspace = true

ext_core.workspace = true
ext_node.workspace = true

anyhow.workspace = true
base64.workspace = true
eszip.workspace = true
futures-util.workspace = true
import_map.workspace = true
log.workspace = true
monch.workspace = true
once_cell.workspace = true
rkyv.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
