[package]
name = "sb_node"
version = "0.1.0"
authors = ["Supabase <team@supabase.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
num-bigint = "0.4.3"
rsa.workspace = true
aes = "=0.8.2"
digest = { version = "0.10.5", features = ["core-api", "std"] }
num-integer = "0.1.45"
num-traits = "0.2.15"
rand = "0.8.5"
libz-sys = "1.1.9"
regex.workspace = true
once_cell.workspace = true
signature = "=1.6.4"
indexmap = { version = "1.9.2", features = ["serde"] }
serde.workspace = true
cbc = { version = "=0.1.2", features = ["alloc"] }
ecb = "=0.1.1"
md-5 = "0.10.5"
md4 = "0.10.2"
ripemd = "0.1.3"
sha-1 = "0.10.0"
sha2 = { version = "0.10.6", features = ["oid"] }
tokio.workspace = true
sha3 = "0.10.5"
idna = "0.3.0"
path-clean = "=0.1.0"
hex = "0.4"
pbkdf2 = "0.12.1"
