# Copyright 2018-2024 the Deno authors. All rights reserved. MIT license.

[package]
name = "sb_node"
version = "0.1.0"
authors = ["Supabase <team@supabase.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
aead-gcm-stream = "0.1"
aes = "=0.8.3"
brotli = "3.3.4"
bytes.workspace = true
cbc = { version = "=0.1.2", features = ["alloc"] }
const-oid = "0.9.5"
data-encoding = "2.3.3"
deno_core.workspace = true
deno_fetch.workspace = true
deno_fs.workspace = true
deno_media_type.workspace = true
deno_net.workspace = true
deno_permissions = { version = "0.9.0" }
deno_whoami = "0.1.0"
digest = { version = "0.10.5", features = ["core-api", "std"] }
dsa = "0.6.1"
ecb = "=0.1.2"
elliptic-curve = { version = "0.13.4", features = ["alloc", "arithmetic", "ecdh", "std", "pem"] }
errno = "0.2.8"
faster-hex.workspace = true
h2 = { version = "0.3.26", features = ["unstable"] }
hkdf = "0.12.3"
http_v02 = { package = "http", version = "0.2.9" }
idna = "0.3.0"
indexmap.workspace = true
k256 = "0.13.1"
lazy-regex = "3"
libc.workspace = true
libz-sys = { version = "1.1", default-features = false }
md-5 = "0.10.5"
md4 = "0.10.2"
nix = "=0.26.2"
num-bigint = { version = "0.4", features = ["rand"] }
num-bigint-dig = "0.8.2"
num-integer = "0.1.45"
num-traits = "0.2.14"
once_cell.workspace = true
p224 = { version = "0.13.0", features = ["ecdh"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
p384 = { version = "0.13.0", features = ["ecdh"] }
path-clean = "=0.1.0"
pbkdf2 = "0.12.1"
pin-project-lite = "0.2.13"
rand = "=0.8.5"
regex.workspace = true
reqwest.workspace = true
ring.workspace = true
ripemd = "0.1.3"
rsa.workspace = true
scrypt = "0.11.0"
sec1 = "0.7"
serde = "1.0.149"
sha-1 = "0.10.0"
sha2 = { version = "0.10.8", features = ["oid"] }
signature = "2.1"
simd-json = "0.13.4"
spki = "0.7.2"
tokio.workspace = true
typenum = "1.15.0"
url = { version = "< 2.5.0", features = ["serde", "expose_internals"] }
winapi = "=0.3.9"
x25519-dalek = "2.0.0"
x509-parser = "0.15.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_Media", "Win32_Storage_FileSystem"] }
winapi = { version = "=0.3.9", features = ["consoleapi"] }
