[package]
name = "npm"
version = "0.1.0"
authors = ["Supabase <team@supabase.com>"]
edition = "2021"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
deno_ast.workspace = true
deno_npm.workspace = true
deno_fs.workspace = true
deno_semver.workspace = true
deno_lockfile.workspace = true
deno_graph.workspace = true
deno_config = { workspace = true, features = ["workspace"] }

sb_core.workspace = true
sb_node.workspace = true

once_cell.workspace = true
async-trait.workspace = true
tar.workspace = true
flate2.workspace = true
ring.workspace = true
serde.workspace = true
reqwest.workspace = true
percent-encoding.workspace = true
base64.workspace = true
thiserror.workspace = true
log.workspace = true
faster-hex.workspace = true
indexmap.workspace = true
base32.workspace = true

hex = "0.4"
bincode = "=1.3.3"