[package]
name = "npm"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
deno_ast.workspace = true
deno_config = { workspace = true, features = ["workspace"] }
deno_core.workspace = true
deno_fs.workspace = true
deno_graph.workspace = true
deno_lockfile.workspace = true
deno_npm.workspace = true
deno_semver.workspace = true

sb_core.workspace = true
sb_node.workspace = true

async-trait.workspace = true
base32.workspace = true
base64.workspace = true
faster-hex.workspace = true
flate2.workspace = true
indexmap.workspace = true
log.workspace = true
once_cell.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
ring.workspace = true
serde.workspace = true
tar.workspace = true
thiserror.workspace = true

bincode = "=1.3.3"
hex = "0.4"