[package]
name = "npm_cache"
version = "0.1.0"
authors = ["Supabase <team@supabase.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
deno_ast.workspace = true
deno_graph.workspace = true
deno_cache_dir.workspace = true
deno_web.workspace = true

sb_core = { version = "0.1.0", path = "../sb_core" }
sb_npm = { version = "0.1.0", path = "../npm" }

tokio.workspace = true
log.workspace = true
anyhow.workspace = true