[package]
name = "npm_cache"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
deno_ast.workspace = true
deno_cache_dir.workspace = true
deno_core.workspace = true
deno_graph.workspace = true
deno_web.workspace = true

npm.workspace = true

sb_core.workspace = true

anyhow.workspace = true
log.workspace = true
tokio.workspace = true