[package]
name = "sb_ai"
version = "0.1.0"
authors = ["Supabase <team@supabase.com>"]
edition = "2021"
resolver = "2"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true

anyhow.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
once_cell.workspace = true
tracing.workspace = true

ndarray = "0.15"
ndarray-linalg = "0.15"
rand = "0.8"
tokenizers = { version = ">=0.13.4", default-features = false, features = [ "onig" ] }

ort = { git = "https://github.com/pykeio/ort", default-features = false, features = [ "ndarray", "half", "load-dynamic", "cuda" ] }
