[package]
name = "sb_ai"
version = "0.1.0"
authors = ["Supabase <team@supabase.com>"]
edition = "2021"
resolver = "2"
license = "MIT"

[lib]
path = "lib.rs"

[[bin]]
name = "preload-sb-ai-defs"
path = "preload_defs.rs"

[dependencies]
deno_core.workspace = true

base_rt = { version = "0.1.0", path = "../base_rt" }

anyhow.workspace = true
log.workspace = true
serde.workspace = true
futures.workspace = true
futures-util = { workspace = true, features = ["io"] }
fxhash.workspace = true
faster-hex.workspace = true
xxhash-rust = { workspace = true, features = ["std", "xxh3"] }
reqwest.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["compat"] }
clap = { workspace = true, features = ["derive"] }
once_cell.workspace = true
ctor.workspace = true
scopeguard.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

ndarray = "0.15"
ndarray-linalg = "0.15"
rand = "0.8"
convert_case = "0.6"
tokenizers = { version = ">=0.13.4", default-features = false, features = [ "onig" ] }

ort = { git = "https://github.com/pykeio/ort", default-features = false, features = [ "ndarray", "half", "load-dynamic", "cuda" ] }
