[package]
name = "sb_core"
version = "0.1.0"
authors = ["Supabase <team@supabase.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
walkdir = "=2.3.2"
deno_ast.workspace = true
deno_net.workspace = true
deno_web.workspace = true
deno_fetch.workspace = true
deno_fs.workspace = true
deno_websocket.workspace = true
anyhow.workspace = true
deno_core.workspace = true
tokio.workspace = true
deno_http.workspace = true
hyper.workspace = true
serde.workspace = true
bytes.workspace = true
deno_tls.workspace = true
thiserror.workspace = true
sb_node = { version = "0.1.0", path = "../node" }
deno_crypto.workspace = true
fs3 = "0.5.0"
log.workspace = true
tokio-util.workspace = true