[package]
name = "sb_core"
version = "0.1.0"
authors = ["Supabase <team@supabase.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
deno_ast = { workspace = true, features = ["transpiling", "bundler", "cjs", "codegen", "proposal", "react", "sourcemap", "transforms", "typescript", "view", "visit"] }
deno_net.workspace = true
deno_web.workspace = true
deno_fetch.workspace = true
deno_fs.workspace = true
deno_websocket.workspace = true
anyhow.workspace = true
deno_core.workspace = true
tokio.workspace = true
deno_http.workspace = true
hyper.workspace = true
serde.workspace = true
bytes.workspace = true
deno_tls.workspace = true
thiserror.workspace = true
base_mem_check = { version = "0.1.0", path = "../base_mem_check" }
sb_node = { version = "0.1.0", path = "../node" }
deno_crypto.workspace = true
fs3.workspace = true
log.workspace = true
tokio-util.workspace = true
ring.workspace = true
deno_graph.workspace = true
deno_io.workspace = true
once_cell.workspace = true
import_map.workspace = true
data-url = { version= "=0.3.0" }
cache_control = { version = "=0.2.0" }
chrono = { version = "=0.4.22", default-features = false, features = ["clock"] }
deno_cache_dir = "=0.6.1"
libc = { workspace = true }
twox-hash = { version = "=1.6.3" }
deno_webstorage.workspace = true
indexmap.workspace = true
encoding_rs = { version = "=0.8.33" }
base64.workspace = true
futures.workspace = true
percent-encoding.workspace = true
scopeguard.workspace = true
enum-as-inner.workspace = true
httparse.workspace = true
http.workspace = true
memmem = "0.1"
faster-hex.workspace=true