[package]
name = "sb_core"
version = "0.1.0"
authors = ["Supabase <team@supabase.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
deno_ast = { workspace = true, features = ["transpiling", "bundler", "cjs", "codegen", "proposal", "react", "sourcemap", "transforms", "typescript", "view", "visit"] }
deno_net.workspace = true
deno_web.workspace = true
deno_fetch.workspace = true
deno_fs.workspace = true
deno_permissions = { version = "0.9.0" }
deno_websocket.workspace = true
deno_http.workspace = true
deno_tls.workspace = true
deno_crypto.workspace = true
deno_graph.workspace = true
deno_io.workspace = true
deno_cache_dir.workspace = true
deno_webstorage.workspace = true

base_rt = { version = "0.1.0", path = "../base_rt" }
base_mem_check = { version = "0.1.0", path = "../base_mem_check" }

sb_node = { version = "0.1.0", path = "../node" }

libc.workspace = true
anyhow.workspace = true
tokio.workspace = true
hyper.workspace = true
serde.workspace = true
bytes.workspace = true
thiserror.workspace = true
fs3.workspace = true
log.workspace = true
tokio-util.workspace = true
ring.workspace = true
once_cell.workspace = true
import_map.workspace = true
indexmap.workspace = true
base64.workspace = true
futures.workspace = true
percent-encoding.workspace = true
scopeguard.workspace = true
enum-as-inner.workspace = true
httparse.workspace = true
http.workspace = true
faster-hex.workspace = true
tracing.workspace = true
fqdn = "0.3.4"

data-url = "=0.3.0"
cache_control = "=0.2.0"
chrono = { version = "=0.4.22", default-features = false, features = ["clock"] }
twox-hash = "=1.6.3"
encoding_rs = "=0.8.33"
memmem = "0.1"
