[package]
name = "sb_env"
version = "0.1.0"
authors = ["Supabase <team@supabase.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
sb_node = { version = "0.1.0", path = "../node" }
sb_core = { version = "0.1.0", path = "../sb_core" }
