[package]
name = "sb_fs"
version = "0.1.0"
authors = ["Supabase <team@supabase.com>"]
edition = "2021"
resolver = "2"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
deno_semver.workspace = true
deno_ast.workspace = true
deno_fs.workspace = true
deno_npm.workspace = true
deno_io.workspace = true

sb_core = { version = "0.1.0", path = "../sb_core" }
sb_node = { version = "0.1.0", path = "../node" }
sb_npm = { version = "0.1.0", path = "../npm" }
sb_eszip_shared = { version = "0.1.0", path = "../sb_eszip_shared" }

anyhow.workspace = true
import_map.workspace = true
indexmap.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
futures.workspace = true
once_cell.workspace = true
thiserror.workspace = true
async-trait.workspace = true
eszip.workspace = true
url.workspace = true
rkyv = { workspace = true, features = ["validation"] }
