[package]
name = "sb_module_loader"
version = "0.1.0"
authors = ["Supabase <team@supabase.com>"]
edition = "2021"
resolver = "2"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
deno_semver.workspace = true
deno_ast.workspace = true
deno_fs.workspace = true
deno_npm.workspace = true
deno_tls.workspace = true

sb_core = { version = "0.1.0", path = "../sb_core" }
sb_node = { version = "0.1.0", path = "../node" }
sb_npm = { version = "0.1.0", path = "../npm" }
sb_graph = { version = "0.1.0", path = "../sb_graph" }
sb_fs = { version = "0.1.0", path = "../sb_fs" }
sb_eszip_shared = { version = "0.1.0", path = "../sb_eszip_shared" }

anyhow.workspace = true
import_map.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
once_cell.workspace = true
monch.workspace = true
base64.workspace = true
tracing.workspace = true
eszip.workspace = true
futures-util.workspace = true
