[package]
name = "sb_os"
version = "0.1.0"
authors = ["Supabase <team@supabase.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
libc.workspace = true
serde.workspace = true
sb_worker_context = { version = "0.1.0", path = "../sb_worker_context" }
sb_core = { version = "0.1.0", path = "../sb_core" }
