[package]
name = "sb_workers"
version = "0.1.0"
authors = ["Supabase <team@supabase.com>"]
edition = "2021"
resolver = "2"
description = "We'll take care of this later"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
anyhow.workspace = true
uuid.workspace = true
deno_core.workspace = true
tokio.workspace = true
deno_http.workspace = true
hyper.workspace = true
serde.workspace = true
bytes.workspace = true
log.workspace = true
enum-as-inner.workspace = true
futures-util.workspace = true
tokio-util = { workspace = true }
thiserror.workspace = true
http_utils = { version = "0.1.0", path = "../http_utils" }
event_worker = { version = "0.1.0", path = "../event_worker" }
sb_graph = { version = "0.1.0", path = "../sb_graph" }
sb_core = { version = "0.1.0", path = "../sb_core" }
deno_config.workspace = true